--- a/_config/addresses.yml
+++ b/_config/addresses.yml
@@ -14,3 +14,6 @@ OrderForm:
 ShopConfig:
   extensions: 
     - 'Addresses_Extension'
+AccountPage_Controller:
+  extensions:
+    - 'AccountPageExtension'
