adding session variable

--- a/_config/addresses.yml
+++ b/_config/addresses.yml
@@ -5,15 +5,23 @@ name: SwipeStripe Addresses
 Order:
   extensions: 
     - 'Addresses_Order'
+
 Customer:
   extensions: 
     - 'Addresses_Customer'
+
 OrderForm:
   extensions: 
     - 'Addresses_OrderForm'
+
 ShopConfig:
   extensions: 
     - 'Addresses_Extension'
+
 AccountPage_Controller:
   extensions:
     - 'AccountPageExtension'
+
+CheckoutPage_Controller:
+  extensions:
+    - ShippingCheckoutPage_Controller
