adding addresses to user accounts area

--- a/_config/addresses.yml
+++ b/_config/addresses.yml
@@ -20,7 +20,7 @@ ShopConfig:
 
 AccountPage_Controller:
   extensions:
-    - 'AccountPageExtension'
+    - 'AccountPageExtension_Controller'
 
 CheckoutPage_Controller:
   extensions:
