--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	{
 		"silverstripe/framework": "~3.1",
 		"silverstripe/cms": "~3.1",
-		"swipestripe/swipestripe": "2.1.*"
+		"plato-creative/platoecommerce": "3.6.*"
 	},
 	"support": 
 	{
